deployment/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: devapp
  labels:
    app: api-gateway
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: api-gateway
  type: ClusterIP
