deployment/k8s/artifactory.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: artifactory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  namespace: artifactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      securityContext:
        fsGroup: 1030
        runAsUser: 1030
      containers:
      - name: artifactory
        image: releases-docker.jfrog.io/jfrog/artifactory-oss:latest
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 8082
          name: router
        volumeMounts:
        - name: artifactory-data
          mountPath: /var/opt/jfrog/artifactory
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
      volumes:
      - name: artifactory-data
        persistentVolumeClaim:
          claimName: artifactory-data
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  namespace: artifactory
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30003
      name: http
    - port: 8082
      targetPort: 8082
      nodePort: 30004
      name: router
  selector:
    app: artifactory
