deployment/k8s/devapp-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devapp-web
  labels:
    app: devapp-web
spec:
  selector:
    app: devapp-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
