deployment/k8s/order-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-app
  labels:
    app: order-app
spec:
  selector:
    app: order-app
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
