deployment/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devapp-gateway
  namespace: devapp
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devapp-vs
  namespace: devapp
spec:
  hosts:
  - "*"
  gateways:
  - devapp-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-gateway
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: devapp-web
        port:
          number: 80
